--- a/qa_wolf_take_home/qa_wolf_take_home/package.json
+++ b/qa_wolf_take_home/qa_wolf_take_home/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "playwright": "^1.39.0"
   },
   "devDependencies": {
